# cl_st1_andressa

./: .env.template  .gitignore  README.md  cl_st1_poc1_andressa.ipynb  collect_reddit.sh  pyproject.toml  reddit.env
cl_st1_ph2_andressa/: cl_st1_ph2_andressa.ipynb
cl_st1_ph3_andressa/: build_prompts_generic.py  build_prompts_summary_guided.py  cl_st1_ph3_andressa.ipynb  cl_st2_ph3_andressa.sh  clean_answers_human.py  examples.py  examples_ori.py  examples_txt.py  factor_lists.py  file_ids.txt  file_index.txt  generate_gpt.py  generate_interpretation_gpt.py  index_keywords.txt  interpretation_prompts.py  keylemmas.py  latex_anova_table.py  missing_files.txt  score_details.py  select_kws_stratified.py  summarise_posts.py  summarise_posts_v1.py
cl_st1_ph3_andressa/columns/: 000001.txt  000002.txt  000004.txt  000005.txt  000006.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  (+289 more)
docs/: Discursive_Representations_of_Loneliness_in_Human-Authored_and_AI-Generated_Texts_A_Lexical_Multidimensional_Analysis.md  Discursive_Representations_of_Loneliness_in_Human-Authored_and_AI-Generated_Texts_A_Lexical_Multidimensional_Analysis.txt  andressa_malta_2026.docx  andressa_malta_2026.md  dev_environment.md  index.md  ph1_design.md  ph1_design_old.md  ph1_runbook.md  prompt_engineering_example.md  using_junie.md
env/: .env.template  cl_st1_andressa.yaml  environment_ph1.yaml
tests/: test_collect_offline.py
(+24200 files in other folders)
